--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="type_login_jj">掘金登录</string>
 
     <string name="click_test">测试点击</string>
+    <string name="tweet_comment_num">  %d 评论</string>
 </resources>
